# panager

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  ide.html  package-lock.json  package.json  vite.config.ts
apps/glide/src-tauri/: Cargo.toml  tauri.conf.json
apps/glide/src-tauri/capabilities/: default.json
apps/glide/src-tauri/icons/: icon.icns
apps/glide/src-tauri/src/: error.rs  lib.rs  main.rs
apps/glide/src-tauri/src/acp/: commands.rs  process.rs  protocol.rs  types.rs
apps/glide/src-tauri/src/git/: mod.rs
apps/glide/src-tauri/src/ide/: mod.rs  settings.rs
apps/glide/src-tauri/src/ide/commands/: files.rs  git.rs  lsp.rs  mod.rs  plugins.rs  recent.rs  search.rs  session.rs  settings.rs  tabs.rs  watcher.rs  window.rs
apps/glide/src-tauri/src/ide/db/: chat.rs  migrations.rs  mod.rs  tabs.rs
apps/glide/src-tauri/src/logging/: mod.rs
apps/glide/src-tauri/src/platform/: capabilities.rs  mod.rs
apps/glide/src-tauri/src/platform/linux/: mod.rs
apps/glide/src-tauri/src/platform/macos/: mod.rs  vibrancy.rs
apps/glide/src-tauri/src/platform/posix/: filesystem.rs  mod.rs
apps/glide/src-tauri/src/platform/windows/: mod.rs
apps/glide/src-tauri/src/plugins/: context.rs  host.rs  mod.rs  types.rs
apps/glide/src-tauri/src/plugins/builtin/: mod.rs
apps/glide/src-tauri/src/plugins/lsp/: client.rs  config.rs  mod.rs
apps/glide/src-tauri/src/utils/: fs.rs  mod.rs
apps/panager/src-tauri/: Cargo.toml
apps/panager/src-tauri/capabilities/: ide.json
apps/panager/src-tauri/src/app/: lifecycle.rs  mod.rs  state.rs
apps/panager/src-tauri/src/commands/: editors.rs  git.rs  mod.rs  scopes.rs  temp.rs  temp_projects.rs  terminal.rs
apps/panager/src-tauri/src/db/: mod.rs
apps/panager/src-tauri/src/db/models/: dto.rs  editor.rs  terminal.rs
apps/panager/src-tauri/src/db/queries/: mod.rs
apps/panager/src-tauri/src/db/repository/: editor_repo.rs  project_command_repo.rs  project_repo.rs  scope_repo.rs
apps/panager/src-tauri/src/events/handlers/: frontend.rs  mod.rs
apps/panager/src-tauri/src/git/: config.rs  identity.rs  url.rs
apps/panager/src-tauri/src/platform/linux/: editors.rs  terminals.rs
apps/panager/src-tauri/src/platform/macos/: lifecycle.rs  liquid_glass.rs  terminals.rs  vibrancy.rs
apps/panager/src-tauri/src/platform/posix/: mod.rs  tray.rs
apps/panager/src-tauri/src/services/: mod.rs
apps/panager/src-tauri/src/services/cleanup/: mod.rs  service.rs
apps/panager/src-tauri/src/services/diagnostics/: models.rs  repository.rs  scanner.rs  service.rs
apps/panager/src-tauri/src/services/folder_scanner/: state.rs
apps/panager/src-tauri/src/ssh/: config.rs  mod.rs
apps/panager/src-tauri/src/utils/: fs.rs  paths.rs  regex.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/acp/: commands.rs  mod.rs  process.rs  types.rs
src-tauri/src/app/: lifecycle.rs  plugins.rs  state.rs
src-tauri/src/commands/: editors.rs  git.rs  liquid_glass.rs  mod.rs  projects.rs  scopes.rs  settings.rs  temp.rs  terminal.rs  terminals.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs  schema.rs
src-tauri/src/db/models/: dto.rs  editor.rs  mod.rs  project.rs  scope.rs
src-tauri/src/db/queries/: project_queries.rs  scope_queries.rs
src-tauri/src/db/repository/: editor_repo.rs  mod.rs  project_group_repo.rs  project_link_repo.rs  project_repo.rs  settings_repo.rs
src-tauri/src/events/: mod.rs  types.rs
src-tauri/src/events/handlers/: diagnostics.rs
src-tauri/src/git/: config.rs  mod.rs
src-tauri/src/ide/: mod.rs  settings.rs  types.rs  watcher.rs
src-tauri/src/ide/commands/: files.rs  git.rs  lsp.rs  mod.rs  window.rs
src-tauri/src/ide/db/: chat.rs  migrations.rs  mod.rs
src-tauri/src/logging/: mod.rs
src-tauri/src/platform/: mod.rs  traits.rs
src-tauri/src/platform/linux/: mod.rs  tray.rs
src-tauri/src/platform/macos/: editors.rs  menu.rs  mod.rs  tray.rs  vibrancy.rs
src-tauri/src/platform/posix/: home.rs
src-tauri/src/plugins/: host.rs  types.rs
src-tauri/src/plugins/builtin/: mod.rs
src-tauri/src/plugins/builtin/typescript/: lsp.rs  mod.rs
src-tauri/src/services/: cleanup.rs  folder_scanner.rs  git_config.rs  git_url.rs  mod.rs  ssh_config.rs
src-tauri/src/services/cleanup/: state.rs
src-tauri/src/services/diagnostics/: mod.rs  models.rs  repository.rs  state.rs
src-tauri/src/services/diagnostics/rules/: mod.rs
src-tauri/src/services/diagnostics/rules/git/: mod.rs  (+3 more)
src-tauri/src/services/folder_scanner/: mod.rs  service.rs
src-tauri/src/ssh/: config.rs
src-tauri/src/utils/: paths.rs  regex.rs
(+463 files in other folders)
