[package]
name = "glide"
version = "0.1.0"
description = "AI-powered code editor"
authors = ["krona"]
edition = "2021"
default-run = "glide"

[lib]
name = "glide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "glide"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.20"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
ignore = "0.4"
which = "7"
thiserror = "2"
directories = "5"
window-vibrancy = "0.5"

# Lazy static alternatives
once_cell = "1.19"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TypeScript type generation
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript"] }
specta = { version = "2.0.0-rc.22", features = ["derive", "chrono", "serde_json"] }
specta-typescript = "0.0.9"

# URL encoding for window parameters
urlencoding = "2"

# Regex for search
regex = "1"

# Home directory
home = "0.5"

# File system watching
notify = "7"

# JSONC (JSON with comments) parsing for settings
json_comments = "0.2"

# Plugin system for LSP
async-trait = "0.1"

# ACP (Agent Client Protocol) for Claude Code integration
agent-client-protocol = { version = "0.9", features = ["unstable_session_resume", "unstable_session_model"] }
tokio-util = { version = "0.7", features = ["codec", "compat"] }
futures = "0.3"
anyhow = "1.0"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Path hashing for project ID
md-5 = "0.10"

# macOS Liquid Glass support
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
