[package]
name = "panager"
version = "0.1.0"
description = "A cross-platform project manager"
authors = ["krona"]
edition = "2021"
default-run = "panager"

[lib]
name = "panager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "panager"
path = "src/main.rs"

[[bin]]
name = "generate-bindings"
path = "src/bin/generate_bindings.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.20"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
ignore = "0.4"
which = "7"
thiserror = "2"
directories = "5"
window-vibrancy = "0.5"
gix-config = "0.50"

# Type-safe SQL query builder
sea-query = "0.32"
sea-query-rusqlite = "0.7"

# Lazy static alternatives
once_cell = "1.19"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TypeScript type generation
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript"] }
specta = { version = "2.0.0-rc.22", features = ["derive", "chrono", "serde_json"] }
specta-typescript = "0.0.9"

# Cross-platform SSH config support
ssh2-config = "0.6"
home = "0.5"
regex = "1"

# macOS Liquid Glass support
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
